# TrueGraph

./: .env.sample  .gitignore  AGENTS.md  LICENSE  README.md  requirements.txt
UI/: README.md  app.js  graph-2d.js  graph-3d.js  graph-shared.js  graph.js  index.html  package-lock.json  package.json  server.py  styles.css
libs/: .gitignore  pyproject.toml
libs/Knowledge_Builder/: .gitignore  README.md  pyproject.toml
libs/Knowledge_Builder/knowledge_builder/: __init__.py  batching.py  bundle.py  config.py  entry.py  exceptions.py  extraction.py  io_loader.py  merge.py  okf_generator.py  registry.py  relationships.py  scheduler.py  search_index.py  types.py  validation.py
libs/Knowledge_Builder/knowledge_builder/providers/: __init__.py  base.py  litellm_provider.py
libs/Knowledge_Builder/tests/: __init__.py  test_pipeline.py
libs/Knowledge_Builder/tests/providers/: test_litellm_provider.py
libs/Query_Pipeline/: README.md
libs/Query_Pipeline/query_engine/: __init__.py  citations.py  context_builder.py  entry.py  evidence.py  generator.py  llm.py  planner.py  ranker.py  response.py  retriever.py  scope.py  types.py  understanding.py  usage.py
libs/Query_Pipeline/tests/: conftest.py  test_query_engine.py
libs/UDP/: README.md
libs/UDP/universal_document_parser/: __init__.py  cli.py  config.py  exceptions.py  logger.py  parser.py
libs/UDP/universal_document_parser/cleanup/: text_cleanup.py
libs/UDP/universal_document_parser/formatters/: __init__.py  json_formatter.py  markdown_formatter.py  text_formatter.py
libs/UDP/universal_document_parser/parsers/: __init__.py  docx_parser.py  markdown_parser.py  pdf_parser.py  pptx_parser.py
libs/UDP/universal_document_parser/tests/: __init__.py  test_cleanup.py  test_docx_parser.py  test_formatters.py  test_markdown_parser.py  test_parser.py  test_pdf_parser.py  test_pptx_parser.py
libs/UDP/universal_document_parser/utils/: file_utils.py
